--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,6 +3,7 @@
   "extends": "../../packages/config-typescript/nestjs.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "outDir": "./dist",
     "verbatimModuleSyntax": false,
     "paths": {
       "@/*": ["src/*"],
