--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,7 @@
     "@nestjs/common": "11.1.4",
     "@nestjs/core": "11.1.4",
     "@nestjs/platform-express": "11.1.4",
+    "@sentry/nestjs": "^10.39.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
