--- a/.github/workflows/cd-web.yml
+++ b/.github/workflows/cd-web.yml
@@ -65,7 +65,9 @@ jobs:
   deploy-dokploy:
     runs-on: ubuntu-latest
     needs: build-and-push
-    if: ${{ secrets.DOKPLOY_WEB_DEPLOY_HOOK != '' }}
+    env:
+      DOKPLOY_DEPLOY_HOOK: ${{ secrets.DOKPLOY_WEB_DEPLOY_HOOK }}
+    if: ${{ env.DOKPLOY_DEPLOY_HOOK != '' }}
     steps:
       - name: Trigger Dokploy deploy hook
-        run: curl -fsSL -X POST "${{ secrets.DOKPLOY_WEB_DEPLOY_HOOK }}"
+        run: curl -fsSL -X POST "$DOKPLOY_DEPLOY_HOOK"
