fix(build): make husky prepare script non-blocking in docker

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "typecheck": "turbo typecheck",
-    "prepare": "git config core.hooksPath .husky",
-    "hooks:install": "git config core.hooksPath .husky",
+    "prepare": "git config core.hooksPath .husky || true",
+    "hooks:install": "git config core.hooksPath .husky || true",
     "infra:check": "bun run tooling/scripts/check-remote-infra.ts",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md,yml,yaml}\"",
     "db:generate": "turbo db:generate --filter=@talimy/database",
