--- a/.github/workflows/cd-api.yml
+++ b/.github/workflows/cd-api.yml
@@ -62,6 +62,21 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+      - name: Verify pushed API image
+        env:
+          IMAGE_REF: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:sha-${{ github.sha }}
+        run: |
+          set -euo pipefail
+          docker pull "$IMAGE_REF"
+
+          CMD="$(docker image inspect "$IMAGE_REF" --format '{{join .Config.Cmd " "}}')"
+          if [ "$CMD" != "bun --cwd apps/api run start:prod" ]; then
+            echo "Unexpected image CMD: '$CMD'"
+            exit 1
+          fi
+
+          docker run --rm --entrypoint sh "$IMAGE_REF" -lc 'test -f /app/apps/api/dist/main.js'
+
   deploy-dokploy:
     runs-on: ubuntu-latest
     needs: build-and-push
