--- a/.github/workflows/cd-platform.yml
+++ b/.github/workflows/cd-platform.yml
@@ -64,6 +64,21 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+      - name: Verify pushed Platform image
+        env:
+          IMAGE_REF: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:sha-${{ github.sha }}
+        run: |
+          set -euo pipefail
+          docker pull "$IMAGE_REF"
+
+          CMD="$(docker image inspect "$IMAGE_REF" --format '{{join .Config.Cmd " "}}')"
+          if [ "$CMD" != "bun --cwd apps/web run start" ]; then
+            echo "Unexpected image CMD: '$CMD'"
+            exit 1
+          fi
+
+          docker run --rm --entrypoint sh "$IMAGE_REF" -lc 'test -d /app/apps/web/.next'
+
   deploy-dokploy:
     runs-on: ubuntu-latest
     needs: build-and-push
