--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -10,7 +10,7 @@ RUN bun install --frozen-lockfile
 
 FROM base AS build
 ENV NODE_ENV=production
-RUN bun --cwd apps/api run build
+RUN bun --cwd apps/api run build && (test -f /app/apps/api/dist/main.js || test -f /app/apps/api/dist/main)
 
 FROM oven/bun:1.3.9 AS runner
 WORKDIR /app
@@ -21,6 +21,7 @@ ENV PORT=4000
 COPY --from=build /app/package.json ./package.json
 COPY --from=build /app/node_modules ./node_modules
 COPY --from=build /app/apps/api ./apps/api
+COPY --from=build /app/apps/api/dist ./apps/api/dist
 COPY --from=build /app/packages ./packages
 
 EXPOSE 4000
