--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -11,7 +11,7 @@ RUN bun install --frozen-lockfile
 FROM base AS build
 ARG APP_TARGET=web
 ENV NODE_ENV=production
-RUN bun --cwd apps/web run build
+RUN bun --cwd apps/web run build && test -f /app/apps/web/.next/BUILD_ID
 
 FROM oven/bun:1.3.9 AS runner
 WORKDIR /app
@@ -22,6 +22,7 @@ ENV PORT=3000
 COPY --from=build /app/package.json ./package.json
 COPY --from=build /app/node_modules ./node_modules
 COPY --from=build /app/apps/web ./apps/web
+COPY --from=build /app/apps/web/.next ./apps/web/.next
 COPY --from=build /app/packages ./packages
 
 EXPOSE 3000
