--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -11,7 +11,7 @@ RUN bun install --frozen-lockfile
 FROM base AS build
 ARG APP_TARGET=web
 ENV NODE_ENV=production
-RUN bun --cwd apps/web run build && test -f /app/apps/web/.next/BUILD_ID
+RUN bun run --cwd apps/web build && test -f /app/apps/web/.next/BUILD_ID
 
 FROM oven/bun:1.3.9 AS runner
 WORKDIR /app
@@ -27,4 +27,4 @@ COPY --from=build /app/packages ./packages
 
 EXPOSE 3000
 
-CMD ["bun", "--cwd", "apps/web", "run", "start"]
+CMD ["bun", "run", "--cwd", "apps/web", "start"]
