--- a/.github/workflows/cd-api.yml
+++ b/.github/workflows/cd-api.yml
@@ -76,7 +76,7 @@ jobs:
           echo "ENTRYPOINT: $ENTRYPOINT"
           echo "WORKDIR: $WORKDIR"
 
-          if [[ "$CMD" != *"apps/api"* || "$CMD" != *"start:prod"* ]]; then
+          if [[ "$CMD" != *"run --cwd apps/api start:prod"* ]]; then
             echo "Unexpected image CMD: '$CMD'"
             exit 1
           fi
