--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,13 +13,14 @@
     "start:prod": "node dist/main"
   },
   "dependencies": {
-    "@nestjs/passport": "^11.0.5",
     "@nestjs/common": "11.1.4",
     "@nestjs/core": "11.1.4",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "11.1.4",
-    "@talimy/shared": "workspace:*",
     "@sentry/nestjs": "^10.39.0",
+    "@talimy/shared": "workspace:*",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.70.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "drizzle-orm": "0.38.3",
