feat(api): enforce permify external pdp checks for gender access

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ NEXTAUTH_SECRET=replace-with-long-random-secret
 NEXTAUTH_URL=https://talimy.space
 JWT_ACCESS_SECRET=replace-with-long-random-secret
 JWT_REFRESH_SECRET=replace-with-long-random-secret
+PERMIFY_ENABLED=false
+PERMIFY_PDP_URL=
+PERMIFY_SCHEMA_VERSION=
+PERMIFY_TIMEOUT_MS=3000
 
 # === Redis (remote via WireGuard) ===
 REDIS_URL=rediss://:PASSWORD@redis.talimy.space:PORT
