--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,10 @@ NEXTAUTH_URL=https://talimy.space
 JWT_ACCESS_SECRET=replace-with-long-random-secret
 JWT_REFRESH_SECRET=replace-with-long-random-secret
 PERMIFY_ENABLED=false
-PERMIFY_PDP_URL=
+PERMIFY_GRPC_ENDPOINT=localhost:3478
 PERMIFY_SCHEMA_VERSION=
 PERMIFY_TIMEOUT_MS=3000
+PERMIFY_INSECURE=true
 
 # === Redis (remote via WireGuard) ===
 REDIS_URL=rediss://:PASSWORD@redis.talimy.space:PORT
