--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,6 +17,7 @@
     "@nestjs/core": "11.1.4",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "11.1.4",
+    "@permify/permify-node": "^1.1.4",
     "@sentry/nestjs": "^10.39.0",
     "@talimy/shared": "workspace:*",
     "bcrypt": "^5.1.1",
