--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -9,8 +9,9 @@ COPY tooling ./tooling
 RUN NODE_ENV=development bun install --frozen-lockfile
 
 FROM base AS build
-ENV NODE_ENV=production
-RUN bun run --cwd apps/api build && (test -f /app/apps/api/dist/main.js || test -f /app/apps/api/dist/main)
+ENV NODE_ENV=development
+RUN bun --cwd apps/api run build
+RUN test -f /app/apps/api/dist/main.js || test -f /app/apps/api/dist/main
 
 FROM oven/bun:1.3.9 AS runner
 WORKDIR /app
@@ -26,4 +27,4 @@ COPY --from=build /app/packages ./packages
 
 EXPOSE 4000
 
-CMD ["bun", "run", "--cwd", "apps/api", "start:prod"]
+CMD ["bun", "--cwd", "apps/api", "run", "start:prod"]
