--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -10,7 +10,7 @@ RUN NODE_ENV=development bun install --frozen-lockfile
 
 FROM base AS build
 ENV NODE_ENV=production
-RUN bun --cwd apps/api run build
+RUN bun run --cwd apps/api build
 RUN test -f /app/apps/api/dist/main.js || test -f /app/apps/api/dist/main
 
 FROM oven/bun:1.3.9 AS runner
@@ -27,4 +27,4 @@ COPY --from=build /app/packages ./packages
 
 EXPOSE 4000
 
-CMD ["bun", "--cwd", "apps/api", "run", "start:prod"]
+CMD ["bun", "run", "--cwd", "apps/api", "start:prod"]
