--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -11,7 +11,7 @@ RUN NODE_ENV=development bun install --frozen-lockfile
 FROM base AS build
 ENV NODE_ENV=production
 RUN bun run --cwd apps/api build
-RUN test -f /app/apps/api/dist/main.js || test -f /app/apps/api/dist/main
+RUN test -f /app/apps/api/dist/main.js || test -f /app/apps/api/dist/main || test -f /app/apps/api/dist/apps/api/src/main.js
 
 FROM oven/bun:1.3.9 AS runner
 WORKDIR /app
