--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -11,7 +11,9 @@ RUN NODE_ENV=development bun install --frozen-lockfile
 FROM base AS build
 ENV NODE_ENV=production
 RUN bun run --cwd apps/api build
-RUN test -f /app/apps/api/dist/main.js || test -f /app/apps/api/dist/main || test -f /app/apps/api/dist/apps/api/src/main.js
+RUN (test -f /app/apps/api/dist/main.js || test -f /app/apps/api/dist/main || test -f /app/apps/api/dist/apps/api/src/main.js) \
+  && ! grep -R 'require("@/' /app/apps/api/dist \
+  && ! grep -R 'from "@/' /app/apps/api/dist
 
 FROM oven/bun:1.3.9 AS runner
 WORKDIR /app
@@ -21,7 +23,7 @@ ENV PORT=4000
 
 COPY --from=build /app/package.json ./package.json
 COPY --from=build /app/node_modules ./node_modules
-COPY --from=build /app/apps/api ./apps/api
+COPY --from=build /app/apps/api/package.json ./apps/api/package.json
 COPY --from=build /app/apps/api/dist ./apps/api/dist
 COPY --from=build /app/packages ./packages
 
