--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,7 @@
     "typecheck": "tsc --noEmit",
     "start": "nest start",
     "start:dev": "nest start --watch",
-    "start:prod": "node dist/main || node dist/apps/api/src/main.js"
+    "start:prod": "node dist/apps/api/src/main.js"
   },
   "dependencies": {
     "@nestjs/common": "11.1.4",
