fix(api): keep runner install frozen with full workspace manifests

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -20,10 +20,11 @@ WORKDIR /app
 
 COPY package.json bun.lock turbo.json tsconfig.base.json ./
 COPY apps/api/package.json ./apps/api/package.json
+COPY apps/web/package.json ./apps/web/package.json
 COPY packages ./packages
 COPY tooling ./tooling
 
-RUN bun install --frozen-lockfile --production
+RUN NODE_ENV=production bun install --frozen-lockfile
 
 COPY --from=build /app/apps/api/dist ./apps/api/dist
 
