--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -43,8 +43,11 @@ COPY --from=build /app/package.json ./package.json
 COPY --from=build /app/bun.lock ./bun.lock
 COPY --from=build /app/node_modules ./node_modules
 COPY --from=build /app/apps/api/package.json ./apps/api/package.json
+COPY --from=build /app/apps/api/node_modules ./apps/api/node_modules
 COPY --from=build /app/.docker-artifacts/api-dist ./apps/api/dist
 COPY --from=build /app/packages ./packages
+RUN test -d /app/apps/api/node_modules/@nestjs/common \
+  && (test -d /app/packages/shared/node_modules/zod || test -d /app/node_modules/zod || test -d /app/apps/api/node_modules/zod)
 
 EXPOSE 4000
 CMD ["bun", "run", "--cwd", "apps/api", "start:prod"]
