--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -7,11 +7,11 @@
     "verbatimModuleSyntax": false,
     "paths": {
       "@/*": ["src/*"],
-      "@talimy/shared": ["../../packages/shared/src/index.ts"],
+      "@talimy/shared": ["../../packages/shared/src/index"],
       "@talimy/shared/*": ["../../packages/shared/src/*"],
-      "@talimy/database": ["../../packages/database"],
-      "@talimy/database/*": ["../../packages/database/*"],
-      "@talimy/trpc": ["../../packages/trpc/src/index.ts"],
+      "@talimy/database": ["../../packages/database/src/index"],
+      "@talimy/database/*": ["../../packages/database/src/*"],
+      "@talimy/trpc": ["../../packages/trpc/src/index"],
       "@talimy/trpc/*": ["../../packages/trpc/src/*"],
       "dotenv": ["../../packages/database/node_modules/dotenv/lib/main.d.ts"],
       "pg": ["../../packages/database/node_modules/@types/pg/index.d.ts"]
