--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "type": "module",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./src/index",
+  "types": "./src/index",
   "scripts": {
     "db:generate": "bunx drizzle-kit generate --config=drizzle.config.ts",
     "db:migrate": "bun run src/migrate.ts",
