--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "type": "module",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./src/index",
+  "types": "./src/index",
   "dependencies": {
     "zod": "^3.24.1"
   }
