--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -3,6 +3,6 @@
   "version": "0.0.1",
   "private": true,
   "type": "module",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts"
+  "main": "./src/index",
+  "types": "./src/index"
 }
