--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -2,10 +2,11 @@
   "name": "@talimy/database",
   "version": "0.0.1",
   "private": true,
-  "type": "module",
-  "main": "./src/index",
-  "types": "./src/index",
+  "type": "commonjs",
+  "main": "./dist/index.js",
+  "types": "./src/index.ts",
   "scripts": {
+    "build": "tsc -p tsconfig.build.json",
     "db:generate": "bunx drizzle-kit generate --config=drizzle.config.ts",
     "db:migrate": "bun run src/migrate.ts",
     "db:seed": "bun run src/seed/index.ts",
