--- a/.github/workflows/cd-web.yml
+++ b/.github/workflows/cd-web.yml
@@ -76,7 +76,7 @@ jobs:
           echo "ENTRYPOINT: $ENTRYPOINT"
           echo "WORKDIR: $WORKDIR"
 
-          if [[ "$CMD" != *"run --cwd apps/web start"* ]]; then
+          if [[ "$CMD" != *"apps/web/node_modules/next/dist/bin/next start"* ]]; then
             echo "Unexpected image CMD: '$CMD'"
             exit 1
           fi
