--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,4 +1,4 @@
-FROM oven/bun:1.3.9 AS base
+FROM oven/bun:1.3.9-alpine AS base
 WORKDIR /app
 
 COPY package.json bun.lock turbo.json tsconfig.base.json ./
@@ -8,19 +8,21 @@ COPY tooling ./tooling
 
 RUN HUSKY=0 NODE_ENV=development bun install --frozen-lockfile
 
-FROM node:20-bookworm-slim AS build
+FROM oven/bun:1.3.9-alpine AS build
 WORKDIR /app
 COPY --from=base /app /app
 ARG APP_TARGET=web
 ENV NODE_ENV=production
-RUN cd apps/web && node node_modules/next/dist/bin/next build
+ENV NEXT_TELEMETRY_DISABLED=1
+RUN bun run --smol --cwd apps/web build
 RUN test -f /app/apps/web/.next/BUILD_ID
 
-FROM node:20-bookworm-slim AS runner
+FROM oven/bun:1.3.9-alpine AS runner
 WORKDIR /app
 
 ENV NODE_ENV=production
 ENV PORT=3000
+ENV NEXT_TELEMETRY_DISABLED=1
 
 COPY --from=build /app/package.json ./package.json
 COPY --from=build /app/node_modules ./node_modules
@@ -30,4 +32,4 @@ COPY --from=build /app/packages ./packages
 
 EXPOSE 3000
 
-CMD ["node", "apps/web/node_modules/next/dist/bin/next", "start", "-p", "3000"]
+CMD ["bun", "run", "--smol", "--cwd", "apps/web", "start"]
