--- a/bridge/bridge_config.json
+++ b/bridge/bridge_config.json
@@ -3,7 +3,9 @@
   "bridge_port": 8765,
   "shared_secret": "CHANGE_ME_STRONG_SECRET",
   "branch": "main",
+  "server_mode": "repo_checks",
   "server_repo_path": "/home/isfan/talimy",
+  "server_workdir": "",
   "laptop_repo_path": "C:/Users/isfan/Desktop/talimy",
   "tasks_file": "docReja/Reja.md",
   "poll_interval_seconds": 5,
