--- a/bridge/bridge_config.laptop.json
+++ b/bridge/bridge_config.laptop.json
@@ -14,7 +14,9 @@
     "repo": "1sfandyor/Talimy",
     "timeout_seconds": 3600,
     "poll_interval_seconds": 10,
-    "workflows": ["CD API", "CD Web", "CD Platform"]
+    "workflows": ["CI", "CD API", "CD Web", "CD Platform"],
+    "no_run_grace_seconds": 30,
+    "require_runs": false
   },
   "telegram": {
     "enabled": "${TELEGRAM_ENABLED}",
