--- a/bridge/bridge_config.laptop.json
+++ b/bridge/bridge_config.laptop.json
@@ -77,13 +77,16 @@
       "if ($env:BRIDGE_SMOKE_TOKEN -and $env:BRIDGE_TENANT_ID) { curl -fsS \"https://api.talimy.space/api/exams?tenantId=$env:BRIDGE_TENANT_ID&page=1&limit=10\" -H \"Authorization: Bearer $env:BRIDGE_SMOKE_TOKEN\" > NUL } else { Write-Error \"missing BRIDGE_SMOKE_TOKEN/BRIDGE_TENANT_ID\"; exit 1 }"
     ]
   },
+  "task_smoke_policy": {
+    "require_explicit_for_numbered_tasks": true
+  },
   "auto_fix": {
-    "enabled": false,
+    "enabled": true,
     "max_retries": 2,
     "codex_timeout_seconds": 900
   },
   "reja_auto_mark": {
-    "enabled": false,
+    "enabled": true,
     "date_override": ""
   },
   "session_context": {
