feat(bridge): generate dynamic task smoke checks with codex

--- a/bridge/bridge_config.laptop.json
+++ b/bridge/bridge_config.laptop.json
@@ -94,6 +94,11 @@
   "task_smoke_policy": {
     "require_explicit_for_numbered_tasks": true
   },
+  "dynamic_smoke": {
+    "enabled": true,
+    "max_commands": 8,
+    "codex_timeout_seconds": 600
+  },
   "auto_fix": {
     "enabled": true,
     "max_retries": 2,
