--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,6 +17,8 @@
     "@nestjs/core": "11.1.4",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "11.1.4",
+    "@nestjs/platform-socket.io": "11.1.4",
+    "@nestjs/websockets": "11.1.4",
     "@permify/permify-node": "^1.1.4",
     "@sentry/nestjs": "^10.39.0",
     "@talimy/database": "workspace:*",
@@ -30,7 +32,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "4.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.0",
